rework by use jobstart

--- a/package.json
+++ b/package.json
@@ -53,8 +53,5 @@
     "tslint": "^5.12.1",
     "typescript": "^3.3.3"
   },
-  "dependencies": {
-    "node-pty": "^0.8.1",
-    "tslib": "^1.9.3"
-  }
+  "dependencies": {}
 }
