--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,16 +2,12 @@
   "extends": "./node_modules/@chemzqm/tsconfig/tsconfig.json",
   "compilerOptions": {
     "outDir": "lib",
-    "target": "es2015",
+    "target": "es2017",
     "module": "commonjs",
     "moduleResolution": "node",
-    "importHelpers": true,
     "lib": ["es2018"],
     "plugins": []
   },
-  "include": [
-    "src"
-  ],
-  "exclude": [
-  ]
+  "include": ["src"],
+  "exclude": []
 }
