--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
           "description": "default input source use in normal mode"
         },
         "imselect.enableFloating": {
-          "type": "string",
+          "type": "boolean",
           "default": true,
           "description": "Enable floating for input method when possible"
         },
