--- a/package.json
+++ b/package.json
@@ -10,13 +10,13 @@
     "colors"
   ],
   "engines": {
-    "coc": "^0.0.72"
+    "coc": "^0.0.79"
   },
   "scripts": {
     "clean": "rimraf lib",
     "build": "tsc -p tsconfig.json",
     "postinstall": "./build.sh",
-    "prepare": "npx npm-run-all clean build"
+    "prepare": "tsc -p tsconfig.json"
   },
   "activationEvents": [
     "*"
@@ -46,11 +46,9 @@
   "license": "MIT",
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
-    "@chemzqm/tslint-config": "^1.0.18",
     "@types/node": "^10.12.24",
-    "coc.nvim": "^0.0.72",
+    "coc.nvim": "^0.0.79-next.7",
     "rimraf": "^2.6.3",
-    "tslint": "^5.12.1",
     "typescript": "^3.3.3"
   },
   "dependencies": {}
