--- a/package.json
+++ b/package.json
@@ -47,9 +47,9 @@
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
     "@types/node": "^10.12.24",
-    "coc.nvim": "^0.0.79-next.7",
+    "coc.nvim": "0.0.79-next.9",
     "rimraf": "^2.6.3",
-    "typescript": "^3.3.3"
+    "typescript": "^4.1.2"
   },
   "dependencies": {}
 }
