--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "colors"
   ],
   "engines": {
-    "coc": "^0.0.79"
+    "coc": "^0.0.80"
   },
   "scripts": {
     "clean": "rimraf lib",
@@ -47,9 +47,9 @@
   "devDependencies": {
     "@chemzqm/tsconfig": "^0.0.3",
     "@types/node": "^10.12.24",
-    "coc.nvim": "0.0.79-next.9",
+    "coc.nvim": "^0.0.80",
     "rimraf": "^2.6.3",
-    "typescript": "^4.1.2"
+    "typescript": "^4.1.3"
   },
   "dependencies": {}
 }
